objects/Warranty_Registration__c.object
<CustomObject>
    <description>Warranty Registration Object represent warranty.</description>
    <fields>
        <fullName>Assets__c</fullName>
        <label>Assets</label>
        <summaryForeignKey>WR_Line_Item__c.Warranty_Registration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Certificate_Status__c</fullName>
        <label>Certificate Status</label>
        <picklist>
            <picklistValues>
                <fullName>Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downloaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_date__c</fullName>
        <label>Created date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Email__c</fullName>
        <label>Customer Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_SFDC_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Warranty_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Mailed__c</fullName>
        <label>Date Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Print__c</fullName>
        <label>Date Downloaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_customer_s_name__c</fullName>
        <label>Customer Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_name__c</fullName>
        <label>PDF name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_SFDC_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Warranty_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed_by__c</fullName>
        <label>Processed by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Certificate_Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, signifies that the Warranty Certificate have been printed</inlineHelpText>
        <label>Warranty Certificate Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Number__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Warranty Registrations</relationshipLabel>
        <relationshipName>Warranty_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Warranty Registration</label>
    <listViews>
        <fullName>Warranty_Search_by_ID_JT</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_SFDC_ID__c</field>
            <operation>contains</operation>
            <value>Fortuna</value>
        </filters>
        <label>Warranty Search by ID - JT</label>
        <language>en_US</language>
        <sharedTo>
            <group>CRM_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Warranty_asset_greater_than_60</fullName>
        <booleanFilter>1 AND 2 AND 4 AND 5 and (3 OR 6 OR 7) and 8</booleanFilter>
        <columns>NAME</columns>
        <columns>Partner_SFDC_ID__c</columns>
        <columns>Assets__c</columns>
        <columns>Customer_SFDC_ID__c</columns>
        <columns>Warranty_Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>Certificate_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Assets__c</field>
            <operation>lessOrEqual</operation>
            <value>60</value>
        </filters>
        <filters>
            <field>Partner_SFDC_ID__c</field>
            <operation>contains</operation>
            <value>sarauer,SCM,Pirig,Matheus,Lorenz,Sarauer,alb-elektric,AEP Gesellschaft</value>
        </filters>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/12/2012</value>
        </filters>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>2/18/2013</value>
        </filters>
        <filters>
            <field>Partner_SFDC_ID__c</field>
            <operation>contains</operation>
            <value>EnergieRing,alb-elektric Huber,Forstner,Alfred Unterholzner,Ikratos</value>
        </filters>
        <filters>
            <field>Partner_SFDC_ID__c</field>
            <operation>contains</operation>
            <value>bysolar,Wagner,Lichtinger,Wieser,LAN@Work</value>
        </filters>
        <filters>
            <field>Certificate_Status__c</field>
            <operation>notEqual</operation>
            <value>Generated</value>
        </filters>
        <label>Warranty asset less than 60</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Warranty_Status</fullName>
        <active>false</active>
        <description>Warranty Status can&apos;t be Draft if its completed once.</description>
        <errorConditionFormula>AND(ISCHANGED(Status__c), 
ISPICKVAL(PRIORVALUE(Status__c), &apos;Completed&apos;), $User.ByPassValidation__c == false
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Warranty Status can&apos;t be Draft if its completed once.</errorMessage>
    </validationRules>
</CustomObject>